# kqw_ao_pipeline

./: .gitignore  CLAUDE.md  cache_moodboard.py  generation_pipeline.py  group_images.py  implementation.md  openrouter_wrapper.py  pyproject.toml  rename_moodboard_files.py  scrap.md  scrap.py  script.py  script_v2.py  script_v3.py  state.md  test_pipeline_step_by_step.py  test_schema.py  utils.py
prompts/: components_guide.md  logline_guide.md  lore_guide.md  narrative_guide.md  outputstruct_base_components.py  outputstruct_base_components_v2.py  scenes_guide.md  stage_shot_guide.md  storyboard_artifact.py
storyboard_core/: __init__.py  artifact.py  artifact_adapters.py  pipeline.py  utils.py
storyboard_short/: __init__.py  artifact.py  artifact_adapters.py  batch_moodboard_to_storyboard.py  batch_moodboard_to_text.py  pipeline.py  test_short_pipeline.py  utils.py
storyboard_shotonly/: __init__.py  artifact.py  artifact_adapters.py  batch_moodboard_to_storyboard.py  batch_moodboard_to_text.py  pipeline.py  test_short_pipeline.py  utils.py
tests/: test_batch_image.py  test_batch_llm.py  test_gemini_filename_recognition.py  test_image_output.py  test_image_recognition.py  test_logging.py  test_structured_output.py  test_wanx_image_to_video.py
