[project]
name = "kqw-ao-pipeline"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.40.38",
    "dotenv>=0.9.9",
    "ipython>=9.5.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "psycopg>=3.2.10",
    "pydantic>=2.11.9",
    "requests>=2.32.5",
]
